--- a/Capital Management.ui
+++ b/Capital Management.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1340</width>
-    <height>750</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,7 +19,7 @@
   <property name="maximumSize">
    <size>
     <width>1340</width>
-    <height>750</height>
+    <height>800</height>
    </size>
   </property>
   <property name="sizeIncrement">
@@ -49,7 +49,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>Icon.ico</normaloff>Icon.ico</iconset>
+    <normaloff>C:/Users/Mahdi Ansarian/Desktop/Icon.ico</normaloff>C:/Users/Mahdi Ansarian/Desktop/Icon.ico</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTabWidget" name="tab">
@@ -58,7 +58,7 @@
       <x>0</x>
       <y>0</y>
       <width>1345</width>
-      <height>755</height>
+      <height>805</height>
      </rect>
     </property>
     <property name="cursor">
@@ -89,7 +89,7 @@
         <x>0</x>
         <y>0</y>
         <width>1331</width>
-        <height>701</height>
+        <height>751</height>
        </rect>
       </property>
       <property name="font">
@@ -120,11 +120,157 @@
        <property name="text">
         <string/>
        </property>
+       <property name="maxLength">
+        <number>16</number>
+       </property>
+       <property name="frame">
+        <bool>true</bool>
+       </property>
        <property name="placeholderText">
         <string>Profit*</string>
        </property>
       </widget>
       <widget class="QLineEdit" name="description">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>130</y>
+         <width>310</width>
+         <height>50</height>
+        </rect>
+       </property>
+       <property name="inputMask">
+        <string/>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="maxLength">
+        <number>70</number>
+       </property>
+       <property name="placeholderText">
+        <string>Description*</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="submitBtn">
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>190</y>
+         <width>210</width>
+         <height>60</height>
+        </rect>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="text">
+        <string>Submit</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>Submit.ico</normaloff>Submit.ico</iconset>
+       </property>
+       <property name="shortcut">
+        <string>Ctrl+Return</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="deleteTxtbox">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>280</y>
+         <width>311</width>
+         <height>50</height>
+        </rect>
+       </property>
+       <property name="inputMask">
+        <string/>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="maxLength">
+        <number>10</number>
+       </property>
+       <property name="placeholderText">
+        <string>Operation ID</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="deleteBtn">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>60</x>
+         <y>340</y>
+         <width>210</width>
+         <height>60</height>
+        </rect>
+       </property>
+       <property name="cursor">
+        <cursorShape>PointingHandCursor</cursorShape>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Delete operation</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>Trash bin.ico</normaloff>Trash bin.ico</iconset>
+       </property>
+       <property name="shortcut">
+        <string>Ctrl+F10</string>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QTextBrowser" name="details">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>10</y>
+         <width>980</width>
+         <height>400</height>
+        </rect>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>ArrowCursor</cursorShape>
+       </property>
+       <property name="tabChangesFocus">
+        <bool>false</bool>
+       </property>
+       <property name="documentTitle">
+        <string/>
+       </property>
+       <property name="placeholderText">
+        <string>Operation details</string>
+       </property>
+      </widget>
+      <widget class="QTextBrowser" name="recentOperations">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>420</y>
+         <width>1311</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="cursor" stdset="0">
+        <cursorShape>ArrowCursor</cursorShape>
+       </property>
+       <property name="placeholderText">
+        <string>Recent operations</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="currencyuUnitTxtBtn">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -139,106 +285,11 @@
        <property name="text">
         <string/>
        </property>
-       <property name="placeholderText">
-        <string>Description*</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="submitBtn">
-       <property name="geometry">
-        <rect>
-         <x>70</x>
-         <y>130</y>
-         <width>190</width>
-         <height>60</height>
-        </rect>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="text">
-        <string>Submit</string>
-       </property>
-       <property name="shortcut">
-        <string>Ctrl+Return</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="deleteTxtbox">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>240</y>
-         <width>311</width>
-         <height>50</height>
-        </rect>
-       </property>
-       <property name="inputMask">
-        <string/>
-       </property>
-       <property name="text">
-        <string/>
+       <property name="maxLength">
+        <number>24</number>
        </property>
        <property name="placeholderText">
-        <string>Operation ID</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="deleteBtn">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <property name="geometry">
-        <rect>
-         <x>70</x>
-         <y>300</y>
-         <width>190</width>
-         <height>60</height>
-        </rect>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="text">
-        <string>Delete operation</string>
-       </property>
-       <property name="shortcut">
-        <string>Ctrl+F10</string>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="details">
-       <property name="geometry">
-        <rect>
-         <x>339</x>
-         <y>10</y>
-         <width>980</width>
-         <height>361</height>
-        </rect>
-       </property>
-       <property name="cursor" stdset="0">
-        <cursorShape>ArrowCursor</cursorShape>
-       </property>
-       <property name="documentTitle">
-        <string/>
-       </property>
-       <property name="placeholderText">
-        <string>Operation details</string>
-       </property>
-      </widget>
-      <widget class="QTextBrowser" name="recentOperations">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>389</y>
-         <width>1311</width>
-         <height>310</height>
-        </rect>
-       </property>
-       <property name="cursor" stdset="0">
-        <cursorShape>ArrowCursor</cursorShape>
-       </property>
-       <property name="placeholderText">
-        <string>Recent operations</string>
+        <string>Currency unit*</string>
        </property>
       </widget>
      </widget>
@@ -253,7 +304,7 @@
         <x>10</x>
         <y>10</y>
         <width>1311</width>
-        <height>690</height>
+        <height>730</height>
        </rect>
       </property>
       <property name="cursor" stdset="0">
@@ -267,6 +318,18 @@
    </widget>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>tab</tabstop>
+  <tabstop>profitInput</tabstop>
+  <tabstop>currencyuUnitTxtBtn</tabstop>
+  <tabstop>description</tabstop>
+  <tabstop>submitBtn</tabstop>
+  <tabstop>details</tabstop>
+  <tabstop>deleteTxtbox</tabstop>
+  <tabstop>deleteBtn</tabstop>
+  <tabstop>recentOperations</tabstop>
+  <tabstop>allOperations</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
